--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,27 +10,32 @@
         <div id="element" class="initial-class"></div>
 
         <!-- Ex2 -->
-            <button id="click-me-button">Click Me</button>
-            <p id="message">Hello, World!</p>
+        <button id="click-me-button">Click Me</button>
+        <p id="message">Hello, World!</p>
 
         <!-- Ex3 -->
-            <form id="email-form">
-                <input type="text" id="email-input" placeholder="Enter your email">
-                <button type="submit">Submit</button>
-            </form>
-            <p id="validation-message"></p>
+        <form id="email-form">
+            <input type="text" id="email-input" placeholder="Enter your email">
+            <button type="submit">Submit</button>
+        </form>
+        <p id="validation-message"></p>
 
         <!-- Ex4 -->
-            <button id="remove-paragraph-button">Remove Paragraph</button>
-            <div id="paragraph-container">
-                <p id="paragraph">This is a paragraph</p>
-            </div>
+        <button id="remove-paragraph-button">Remove Paragraph</button>
+        <div id="paragraph-container">
+            <p id="paragraph">This is a paragraph</p>
+        </div>
 
         <!-- Ex5 -->
-            <div id="hover-area" style="width: 200px; height: 200px; background-color: lightblue;"></div>
-            <p id="interaction-result">Hover over the area.</p>
-    </div>
-    <script type="text/javascript" src="src/exercises/ex3.js"></script>
+        <div id="hover-area" style="width: 200px; height: 200px; background-color: lightblue;"></div>
+        <p id="interaction-result">Hover over the area.</p>
 
+        <!-- Exercice 4 - Data display -->
+        <div id="weather-data">
+            <!-- Les données météorologiques seront affichées ici -->
+        </div>
+    </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="module" src="./src/exercises/ex3.js"></script>
 </body>
 </html>
